frontend/deployment/k8s/fast-counts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: fast-counts
  name: fast-counts
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fast-counts
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: fast-counts
    spec:
      containers:
        - image: nadeemlab/spt-countsserver:latest
          name: fast-counts
          ports:
            - containerPort: 8016
          resources: 
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /countsserver/source_data/
              name: fast-counts-claim0
      restartPolicy: Always
      volumes:
        - name: fast-counts-claim0
          persistentVolumeClaim:
            claimName: fast-counts-claim0
