frontend/deployment/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: wooferclaw/frontend:latest
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
          resources: 
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
