frontend/deployment/k8s/fast-counts-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fast-counts
  name: fast-counts
spec:
  type: ClusterIP
  ports:
    - name: "8016"
      port: 8016
      targetPort: 8016
  selector:
    io.kompose.service: fast-counts
